Upgrade to Java 25
Updates the Java SDK to v25, JavaFX to v25, Gradle to v9.5.1, and the JLink plugin to v3.2.1